# sendbyte-rust

./: Cargo.toml  LICENSE  README.md
examples/: send_email.rs  smoke.rs  verify_domain.rs
src/: client.rs  domains.rs  emails.rs  error.rs  lib.rs  signature.rs  webhooks.rs
tests/: sdk.rs
