[package]
name = "sendbyte-sdk"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "An unofficial Rust SDK for SendByte, the email API for Africa."
license = "MIT"
homepage = "https://sendbyte.africa"
repository = "https://github.com/Zfinix/sendbyte-rust"
documentation = "https://docs.sendbyte.africa"
readme = "README.md"
keywords = ["email", "api", "transactional", "africa", "sendbyte"]
categories = ["api-bindings", "email"]

[lib]
name = "sendbyte"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
uuid = { version = "1", features = ["v4"] }
fastrand = "2"
httpdate = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"

[[example]]
name = "send_email"

[[example]]
name = "verify_domain"
